pidgin-lwqq : the webqq protocol for pidgin based on lwqq.
author : xiehuc@gmail.com

dev (11/24/2012):
	* new feature: add fast index to speed up qqnumber/uin lookup
	* new feature: support local qqnumber cache.

dev (10/26/2012):
	* new feature: support send/recv offline file.
	* new feature: support recv file trans.

dev (09/25/2012):
	* new feature: support block group message

dev (09/02/2012):
	* new feature: support font style

dev (08/26/2012):
	* new feature: not official support for offline file.

dev (08/18/2012):
	* new feature: support multi account
	* enhancement: not use qqnumber.use uin.big speed up
	* bug fix:     use offpic instead of cface. stable.

dev (08/12/2012):
	* new feature: support group whisper message
	* new feature: support change status

dev (08/10/2012):
	* disable change group markname
	* new feature: visit buddy qqzone

dev (08/08/2012):
	* new feature: support change buddy markname
	* new feature: support change group markname
	* new feature: support change buddy category
	* new feature: support confirm buddy request

master (08/04/2012):
	* face full support
	* introduce new async event/evset api
	* send message async
	* send picture async
	* use cface to upload buddy message pictures