@@ -278,6 +278,7 @@ typedef enum {
     LWQQ_EC_HTTP_ERROR = 30,
     LWQQ_EC_DB_EXEC_FAIELD = 50,
     LWQQ_EC_DB_CLOSE_FAILED,
+    LWQQ_EC_NO_RESULT
 } LwqqErrorCode;
 
 /* Struct defination end */
