@@ -1,5 +1,9 @@
 pidgin-lwqq : the webqq protocol for pidgin based on lwqq.
 author : xiehuc@gmail.com
+dev (01/06/2012):
+	* new feature: add friend
+	* new feature: less lost connection
+	* enhancement: refine original old api
 
 dev (11/24/2012):
 	* new feature: add fast index to speed up qqnumber/uin lookup
